precompiles/utils/macro/tests/precompile/compile-fail/pre-check/no-parameter.stderr
error: Precompile methods must have at least 1 parameter (the PrecompileHandle)
  --> tests/precompile/compile-fail/pre-check/no-parameter.rs:21:2
   |
21 |     fn pre_check() {
   |     ^^^^^^^^^^^^^^
